data/harvested_knowledge/syntax_errors.txt
node : C:\Users\meeko\Desktop\GAZA_ROSE_FORCE_BOT\ai_fixed_bot.js:22
At line:1 char:16
+ $syntaxCheck = node --check "ai_fixed_bot.js" 2>&1
+                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (C:\Users\meeko\...fixed_bot.js:22:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
            const response = await axios.get(`${this.baseUrl}/v1/trader-data`);
                                              ^

SyntaxError: Unexpected identifier '$'
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.14.0
